--- a/docutils.conf
+++ b/docutils.conf
@@ -8,14 +8,14 @@ datestamp: %Y-%m-%d %H:%M UTC
 generator: 1
 
 # use the local stylesheet
-stylesheet: pep.css
-template: pyramid-pep-template
+stylesheet: sep.css
+template: pyramid-sep-template
 
 # link to the stylesheet; don't embed it
 embed-stylesheet: 0
 
 # path to PEPs, for template:
-pep-home: /dev/peps/
+sep-home: /dev/seps/
 
 # base URL for PEP references (no host so mirrors work):
-pep-base-url: /dev/peps/
+sep-base-url: /dev/seps/
